infrastructure/envoy-gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: dt26-hospital-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
