infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: dt26-hospital-gateway
  namespace: dt26-hospital
spec:
  gatewayClassName: dt26-hospital-gateway-class
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    protocol: HTTP
    port: 80
